Fixed overflow for watched contracts

--- a/src/Common/Styles/base.scss
+++ b/src/Common/Styles/base.scss
@@ -37,6 +37,10 @@
   display: flex;
 }
 
+.FlexWrap {
+  flex-wrap: wrap;
+}
+
 .OverflowHidden {
   overflow: hidden;
 }
